--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "osd.h": "c",
         "nes_ppu.h": "c",
         "nes_apu.h": "c",
-        "nes6502.h": "c"
+        "nes6502.h": "c",
+        "hw_config.h": "c"
     }
 }
